k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: onboarding
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: onboarding
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
